--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,7 +15,6 @@ section {
 }
 
 /*--- Nav ---*/
-
 .navbar {
   background-color: rgba(255, 255, 255, 0);
   -webkit-transition: background-color 0.4s ease-in-out;
@@ -25,6 +24,7 @@ section {
 
 .navbar.shrink {
   background-color: rgba(255, 255, 255, 1);
+  border-bottom: 1px solid rgb(212,53,28);
 }
 
 #navbarSupportedContent {
@@ -79,5 +79,6 @@ section {
   width: 600px;
   background: #b1b1b1;
 }
+
 
 
