--- a/public/css/index.css
+++ b/public/css/index.css
@@ -36,7 +36,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: white;
   margin-bottom: 20px;
   height: 300px;
 }
@@ -52,6 +51,7 @@
 /*--- Owl carousel flip cards ---*/
 .flip-card {
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  background: transparent;
 }
 
 /* This container is needed to position the front and back side */
@@ -59,7 +59,6 @@
   position: relative;
   width: 100%;
   height: 100%;
-  border-radius: 4px;
   padding: 5%;
   text-align: center;
   transition: transform 0.8s;
@@ -69,14 +68,25 @@
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
+.flip-card-inner, .flip-card-front, .flip-card-back {
+  border-radius: 4px;
+}
+
 /* Do an horizontal flip when you move the mouse over the flip box container */
 .flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
 }
 
 .flip-card-front {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
   -webkit-backface-visibility: hidden; /* Safari */
-  backface-visibility: hidden;
+  backface-visibility: hidden;  
 }
 
 
@@ -133,10 +143,24 @@
   width: 20rem;
   transition: all 0.5s linear; /* carousel minification */
   margin: 0 auto;
+  pointer-events: none;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
 }
 
 .center .product-info.card{
   transform: scale(1);
+  pointer-events: all;
+  -webkit-touch-callout: auto; /* iOS Safari */
+  -webkit-user-select: auto; /* Safari */
+  -khtml-user-select: auto; /* Konqueror HTML */
+  -moz-user-select: auto; /* Old versions of Firefox */
+  -ms-user-select: auto; /* Internet Explorer/Edge */
+  user-select: auto; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
 }
 
 .card .img-wrapper {
