--- a/public/css/index.css
+++ b/public/css/index.css
@@ -17,6 +17,42 @@
   text-shadow: 0.1rem 0.1rem 1.5rem black;
 }
 
+#quality-box {
+  background-image: linear-gradient( rgba(0, 0, 0, 0.6), #d4351c82 ), url('../images/value-bg/coding.webp');
+}
+
+#creative-box {
+  background-image: linear-gradient( rgba(0, 0, 0, 0.6), #2180f482 ), url('../images/value-bg/creative-brain.jpg');
+}
+
+#innovation-box {
+  background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(189, 99, 99, 0.51) ), url('../images/value-bg/innovation.jpg');
+}
+
+.value-box {
+  background-size: 100% 100%;
+  background-position: center;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 80%;
+  color: white;
+  border: 0.5px solid lightgrey;
+  padding: 10%;
+  border-radius: 5px;
+  transition: all 0.5s;
+}
+
+.value-box:hover {
+  background-size: 107% 107%;
+}
+
+.value-box p {
+  display: none;
+}
+
 
 /*--- Owl carousel cards ---*/
 .member-info .circle-img {
