--- a/public/css/main.css
+++ b/public/css/main.css
@@ -65,19 +65,66 @@ section {
   color: rgb(205, 205, 235) !important;
 }
 
+/*--- Footer ---*/
+footer.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #0a2146;
+  color: white;
+  padding: 5px;
+}
+
+footer.footer p, footer.footer .nav-links {
+  margin-top: 20px;
+  margin-bottom: 5px;
+} 
+
+footer.footer .nav-links {
+  display: flex;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  justify-content: center;
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+}
+
+footer.footer .nav-links li:not(:first-child) {
+  border-left: 1px solid white !important;
+}
+
+footer.footer .nav-links li {
+  padding: 0 20px;
+}
+
+footer.footer .nav-links a {
+  color: white;
+}
+
+
 /*--- Utility ---*/
 .circle-icon {
   display: inline-block;
   border-radius: 200px;
   padding: 0.6em 0.72em;
-  border: 0.5px solid black;
   font-size: 22px;
+  background-color: #092145;
+}
+
+.circle-icon {
+  color: #D4351C !important;
+  font-size: 25px;
 }
 
 .sep {
   margin: 60px auto;
   width: 600px;
   background: #b1b1b1;
+}
+
+.sep.sep-white {
+  background: white;
 }
 
 .no-resize {
