Add handlebars sections for pages & about us page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,27 @@
+{{#section 'head'}}
+<!-- Owl carousel -->
+<link rel="stylesheet" href="libs/owl/dist/assets/owl.carousel.min.css" />
+<link rel="stylesheet" href="libs/owl/dist/assets/owl.theme.default.min.css" />
+<script src="libs/owl/dist/owl.carousel.min.js"></script>
+
+<!-- AOS (Scroll Animation -->
+<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script src="libs/scroll-animate/scroll-config.js"></script>
+
+<!-- SweetAlert -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+
+<!-- Page JS -->
+<script src="js/carousel.js"></script>
+<script src="js/email.js"></script>
+
+<!-- Page Styles -->
+<link rel="stylesheet" href="css/fixed.css" />
+<link rel="stylesheet" href="css/index.css" />
+{{/section}}
+
+
 <section class="hero-img container-fluid p-0">
   <!-- Start hero image -->
   <div class="landing">
