--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -20,29 +20,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/js/all.min.js" integrity="sha512-M+hXwltZ3+0nFQJiVke7pqXY7VdtWW2jVG31zrml+eteTP7im25FdwtLhIBTWkaHRQyPrhO2uy8glLMHZzhFog==" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" integrity="sha512-xA6Hp6oezhjd6LiLZynuukm80f8BoZ3OpcEYaqKoCV3HKQDrYjDE1Gu8ocxgxoXmwmSzM4iqPvCsOkQNiu41GA==" crossorigin="anonymous" />
 
-  <!-- Owl carousel -->
-  <link rel="stylesheet" href="libs/owl/dist/assets/owl.carousel.min.css" />
-  <link rel="stylesheet" href="libs/owl/dist/assets/owl.theme.default.min.css" />
-  <script src="libs/owl/dist/owl.carousel.min.js"></script>
-
-  <!-- AOS (Scroll Animation -->
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script src="libs/scroll-animate/scroll-config.js"></script>
-
-  <!-- SweetAlert -->
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-
-  <!-- Page JS -->
+  <!-- Site JS -->
   <script src="js/nav.js"></script>
-  <script src="js/carousel.js"></script>
-  <script src="js/email.js"></script>
-  <script src="js/script.js"></script>
-  
-  <!-- Page Styles -->
-  <link rel="stylesheet" href="css/fixed.css" />
+
+  <!-- Site CSS -->
   <link rel="stylesheet" href="css/main.css" />
-  <link rel="stylesheet" href="css/index.css" />
+  
+  <!-- From associated file, import the head block for specific page scripts, styles etc.-->
+  {{{_sections.head}}}
 </head>
 <body>
   <main class="header-nav">
