--- a/views/index.hbs
+++ b/views/index.hbs
@@ -219,7 +219,13 @@
           <div class="card-body">
             <h5 class="card-title">Zombie Runner</h5>
             <p class="card-text">A short description of the application which is great. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
-            <a href="#" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
+            <div class="card-button-container d-flex justify-content-between">
+              <a href="#" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
+              <div class="d-flex store-buttons align-items-center">
+                <a class="d-flex align-items-center align-self-center mr-2" href="#"><i class="apple-store store-icon fab fa-apple fa-fw"></i></i></a>
+                <a class="d-flex align-items-center align-self-center" href="#"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -231,7 +237,13 @@
           <div class="card-body">
             <h5 class="card-title">Zombie Runner</h5>
             <p class="card-text">A short description of the application which is great. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
-            <a href="#" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
+            <div class="card-button-container d-flex justify-content-between">
+              <a href="#" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
+              <div class="d-flex store-buttons align-items-center">
+                <a class="d-flex align-items-center align-self-center mr-2" href="#"><i class="apple-store store-icon fab fa-apple fa-fw"></i></i></a>
+                <a class="d-flex align-items-center align-self-center" href="#"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -243,7 +255,13 @@
           <div class="card-body">
             <h5 class="card-title">Zombie Runner</h5>
             <p class="card-text">A short description of the application which is great. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
-            <a href="#" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
+            <div class="card-button-container d-flex justify-content-between">
+              <a href="#" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
+              <div class="d-flex store-buttons align-items-center">
+                <a class="d-flex align-items-center align-self-center mr-2" href="#"><i class="apple-store store-icon fab fa-apple fa-fw"></i></i></a>
+                <a class="d-flex align-items-center align-self-center" href="#"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -255,7 +273,14 @@
           <div class="card-body">
             <h5 class="card-title">Zombie Runner</h5>
             <p class="card-text">A short description of the application which is great. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
-            <a href="#" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
+           
+            <div class="card-button-container d-flex justify-content-between">
+              <a href="#" class="read-more-btn btn btn-md moon-btn btn-outline-dark">Read More</a>
+              <div class="d-flex store-buttons align-items-center">
+                <a class="d-flex align-items-center align-self-center mr-2" href="#"><i class="apple-store store-icon fab fa-apple fa-fw"></i></i></a>
+                <a class="d-flex align-items-center align-self-center" href="#"><i class="android-store store-icon fab fa-google-play fa-fw"></i></a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
