--- a/views/about-us.hbs
+++ b/views/about-us.hbs
@@ -1,3 +1,15 @@
-<main class="heading">
+<div class="heading">
   <h1>About Us</h1>
-</main>
+  <h1>About Us</h1>
+
+  <h1>About Us</h1>
+  <h1>About Us</h1>
+
+  <h1>About Us</h1>
+  <h1>About Us</h1>
+
+
+
+  <h1>About Us</h1>
+  <h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1><h1>About Us</h1>
+</div>
