--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" integrity="sha512-xA6Hp6oezhjd6LiLZynuukm80f8BoZ3OpcEYaqKoCV3HKQDrYjDE1Gu8ocxgxoXmwmSzM4iqPvCsOkQNiu41GA==" crossorigin="anonymous" />
 
   <!-- Site JS -->
-  <script src="js/nav.js"></script>
+  <script src="js/nav.js" noshrink="{{noshrink}}"></script>
 
   <!-- Site CSS -->
   <link rel="stylesheet" href="css/main.css" />
@@ -45,16 +45,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item active px-3">
-                <a href="index.html" class="nav-link">Home</a>
+                <a href="/" class="nav-link">Home</a>
               </li>
               <li class="nav-item px-3">
-                <a href="about.html" class="nav-link">About Us</a>
+                <a href="about" class="nav-link">About Us</a>
               </li>
               <li class="nav-item px-3">
-                <a href="products.html" class="nav-link">Products</a>
+                <a href="products" class="nav-link">Products</a>
               </li>
               <li class="nav-item px-3">
-                <a href="contact.html" class="nav-link">Contact</a>
+                <a href="contact" class="nav-link">Contact</a>
               </li>
             </ul>
           </div>
