--- a/views/index.hbs
+++ b/views/index.hbs
@@ -90,7 +90,7 @@
       <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="100" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
+            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" />
             <h4>John Doe</h4>
             <p>Developer</p>
           </div>
@@ -104,7 +104,7 @@
       <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="300" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
+            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" />
             <h4>John Doe</h4>
             <p>Developer</p>
           </div>
@@ -118,7 +118,7 @@
       <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="500" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
+            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" />
             <h4>John Doe</h4>
             <p>Developer</p>
           </div>
@@ -132,7 +132,7 @@
       <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="700" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
+            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" />
             <h4>John Doe</h4>
             <p>Developer</p>
           </div>
@@ -148,7 +148,7 @@
       <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="900" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
+            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" />
             <h4>John Doe</h4>
             <p>Developer</p>
           </div>
@@ -162,7 +162,7 @@
       <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="1100" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
+            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" />
             <h4>John Doe</h4>
             <p>Developer</p>
           </div>
@@ -176,7 +176,7 @@
       <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="1300" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
+            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" />
             <h4>John Doe</h4>
             <p>Developer</p>
           </div>
@@ -190,7 +190,7 @@
       <div class="item flip-card" data-aos="zoom-in-up" data-aos-offset="150" data-aos-delay="1500" data-aos-easing="ease-out-back">
         <div class="member-info flip-card-inner">
           <div class="flip-card-front">
-            <img src="images/team/placeholder.png" class="circle-img" alt="John Doe" />
+            <img src="images/team/index-profiles/placeholder.png" class="circle-img" alt="John Doe" />
             <h4>John Doe</h4>
             <p>Developer</p>
           </div>
