--- a/views/index.hbs
+++ b/views/index.hbs
@@ -21,7 +21,6 @@
 <link rel="stylesheet" href="css/index.css" />
 {{/section}}
 
-
 <section class="hero-img container-fluid p-0">
   <!-- Start hero image -->
   <div class="landing">
@@ -34,11 +33,17 @@
     <h1 class="display-4 font-weight-bold">Dreamlink Studio</h1>
     <h3>Linking our dreams with reality</h3>
   </div>
+
+  <div class="scroll-down-container text-center">
+    <button class="scroll-down-btn" data-scroll="true" data-to=".what-we-do">
+      <i class="fas fa-chevron-down"></i>
+    </button>
+  </div>
   <!-- End hero image -->
 </section>
 
 <!-- What we do -->
-<section classs="what-we-do">
+<section class="what-we-do">
   <h1 class="display-5 text-center font-weight-light text-capitalize">What we do</h1>
   <!--div class="container text-center mt-4">
     <p>We deliver and produce high qualitty applications. Our focus is on games but we plan on expanding our applications to cover general purpose software. Our team focuse on three core values, quality, creativity and innovation. These core ideas act as the core building blocks for our applications and software. This allows our applications and software unique, and unlike any other technologies out there.</p>  
