--- a/public/css/index.css
+++ b/public/css/index.css
@@ -17,6 +17,71 @@
   text-shadow: 0.1rem 0.1rem 1.5rem black;
 }
 
+/* Scroll down button */
+.scroll-down-container {
+  display: block;
+  position: absolute;
+  width: 100%;
+  max-width: 100%;
+  bottom: 25%;
+  z-index: 1;
+  color: white;
+}
+
+.scroll-down-container .scroll-down-btn {
+  background-color: transparent;
+  color: white;
+  border: 0;
+  outline: 0;
+  font-size: 50px;
+  -webkit-animation: scrolldown 2s infinite;
+  animation: scrolldown 2s infinite;
+  transition: color 0.3s ease-in-out;
+}
+
+.scroll-down-container .scroll-down-btn:hover {
+  color: #da523e;
+  transition: color 0.3s ease-out;
+}
+
+@-webkit-keyframes scrolldown {
+  0% {
+    -webkit-transform: translate(0, 0);
+  }
+  20% {
+    -webkit-transform: translate(0px, 10px);
+  }
+  40% {
+    -webkit-transform: translate(0, 0);
+  }
+}
+
+@keyframes scrolldown {
+  0% {
+    transform: translate(0, 0);
+  }
+  20% {
+    transform: translate(0, 10px);
+  }
+  40% {
+    transform: translate(0, 0);
+  }
+}
+
+@media(max-height: 600px) {
+  .scroll-down-container {
+    bottom: 10%;
+  }
+}
+
+@media(max-height: 450px) {
+  .scroll-down-container {
+    display: none;
+  }
+}
+
+/*--- What we do ---*/
+
 #quality-box {
   background-image: linear-gradient( rgba(0, 0, 0, 0.6), #d4351c82 ), url('../images/value-bg/coding.webp');
 }
