--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -22,6 +22,7 @@
 
   <!-- Site JS -->
   <script src="js/nav.js" noshrink="{{noshrink}}"></script>
+  <script src="js/scroll.js"></script>
 
   <!-- Site CSS -->
   <link rel="stylesheet" href="css/main.css" />
@@ -30,6 +31,13 @@
   {{{_sections.head}}}
 </head>
 <body>
+  <div class="scroll-top" id="scroll-top">
+    <button class="scroll-top-btn" data-scroll="true" data-to="body">
+      <div class="circle-icon">
+        <i class="icon fas fa-chevron-up fa-fw"></i>
+      </div>
+    </button>
+  </div>
   <main class="header-nav">
     <!-- Start Navigation -->
     <header>
