--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="libs/owl/dist/assets/owl.theme.default.min.css" />
 <script src="libs/owl/dist/owl.carousel.min.js"></script>
 
-<!-- AOS (Scroll Animation -->
+<!-- AOS (Scroll Animation) -->
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script src="libs/scroll-animate/scroll-config.js"></script>
