--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,6 +1,12 @@
 {{#section 'head'}}
 <!-- Owl carousel -->
 <link rel="stylesheet" href="css/about.css" />
+
+<!-- AOS (Scroll Animation) -->
+<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script src="libs/scroll-animate/scroll-config.js"></script>
+
 {{/section}}
 
 <section class="about-us">
@@ -25,8 +31,9 @@
 <!-- Image ratio: 212 × 238 (w x h) -->
 <section class="our-people">
   <h1 class="display-5 text-center font-weight-light text-capitalize">Our people</h1>
-  <div class="container mt-5">
-    <div class="d-inline-flex row my-4">
+  <div class="container">
+
+    <div class="profile-row d-inline-flex row my-4" data-aos="fade-right" data-aos-once="true" data-aos-mirror="false">
       <div class="d-flex col-lg-2 align-items-center justify-content-center">
         <!-- 210 x 235 (ie: width*1.12 ratio)-->
         <figure class="img-container text-lg-left text-center my-0">
@@ -44,7 +51,7 @@
       </div>
     </div>
 
-    <div class="d-inline-flex row my-4 text-lg-right text-left flex-row-reverse">
+    <div class="profile-row d-inline-flex row my-4 text-lg-right text-left flex-row-reverse" data-aos="fade-left" data-aos-once="true" data-aos-mirror="false">
       <div class="d-flex col-lg-2 align-items-center justify-content-center">
         <figure class="img-container text-lg-left text-center my-0">
           <img src="images/team/about-profiles/mark.jpg" class="profile-image img-fluid" alt="John Doe Profile Image" />
@@ -54,7 +61,112 @@
         </figure>
       </div>
       <div class="col-lg-10 mt-4 mt-lg-0">
-        <h4 class="capitalize">Mark Donal</h4>
+        <h4 class="capitalize">Mark Donald</h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lorem velit, varius sit amet suscipit a, dignissim a metus. Integer at lorem id justo mollis posuere. Curabitur porttitor eget metus a tincidunt. Vivamus et pharetra ligula. Nulla sapien quam, vehicula vel enim in, malesuada dignissim risus. Proin mauris velit, aliquam ac pulvinar ut, viverra vel ex. Sed bibendum ornare ante, eu aliquet tellus tempor a. Vivamus non ligula sit amet dui mollis congue a id augue. Integer facilisis posuere eros, sed semper massa posuere pharetra. Sed quam augue, ultricies id laoreet in, porta a libero. Morbi turpis urna, ornare aliquam vehicula pellentesque, vehicula quis orcin.
+        </p>
+      </div>
+    </div>
+
+    <div class="profile-row d-inline-flex row my-4" data-aos="fade-right" data-aos-once="true" data-aos-mirror="false">
+      <div class="d-flex col-lg-2 align-items-center justify-content-center">
+        <!-- 210 x 235 (ie: width*1.12 ratio)-->
+        <figure class="img-container text-lg-left text-center my-0">
+          <img src="images/team/about-profiles/mark.jpg" class="profile-image img-fluid" alt="John Doe Profile Image" />
+          <figcaption class="socials">
+            <a href="#"><i class="icon fab fa-linkedin"></i></a>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="col-lg-10 mt-4 mt-lg-0">
+        <h4 class="capitalize">Mark Donald</h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lorem velit, varius sit amet suscipit a, dignissim a metus. Integer at lorem id justo mollis posuere. Curabitur porttitor eget metus a tincidunt. Vivamus et pharetra ligula. Nulla sapien quam, vehicula vel enim in, malesuada dignissim risus. Proin mauris velit, aliquam ac pulvinar ut, viverra vel ex. Sed bibendum ornare ante, eu aliquet tellus tempor a. Vivamus non ligula sit amet dui mollis congue a id augue. Integer facilisis posuere eros, sed semper massa posuere pharetra. Sed quam augue, ultricies id laoreet in, porta a libero. Morbi turpis urna, ornare aliquam vehicula pellentesque, vehicula quis orcin.
+        </p>
+      </div>
+    </div>
+
+    <div class="profile-row d-inline-flex row my-4 text-lg-right text-left flex-row-reverse" data-aos="fade-left" data-aos-once="true" data-aos-mirror="false">
+      <div class="d-flex col-lg-2 align-items-center justify-content-center">
+        <figure class="img-container text-lg-left text-center my-0">
+          <img src="images/team/about-profiles/mark.jpg" class="profile-image img-fluid" alt="John Doe Profile Image" />
+          <figcaption class="socials">
+            <a href="#"><i class="icon fab fa-linkedin"></i></a>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="col-lg-10 mt-4 mt-lg-0">
+        <h4 class="capitalize">Mark Donald</h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lorem velit, varius sit amet suscipit a, dignissim a metus. Integer at lorem id justo mollis posuere. Curabitur porttitor eget metus a tincidunt. Vivamus et pharetra ligula. Nulla sapien quam, vehicula vel enim in, malesuada dignissim risus. Proin mauris velit, aliquam ac pulvinar ut, viverra vel ex. Sed bibendum ornare ante, eu aliquet tellus tempor a. Vivamus non ligula sit amet dui mollis congue a id augue. Integer facilisis posuere eros, sed semper massa posuere pharetra. Sed quam augue, ultricies id laoreet in, porta a libero. Morbi turpis urna, ornare aliquam vehicula pellentesque, vehicula quis orcin.
+        </p>
+      </div>
+    </div>
+
+    <div class="profile-row d-inline-flex row my-4" data-aos="fade-right" data-aos-once="true" data-aos-mirror="false">
+      <div class="d-flex col-lg-2 align-items-center justify-content-center">
+        <!-- 210 x 235 (ie: width*1.12 ratio)-->
+        <figure class="img-container text-lg-left text-center my-0">
+          <img src="images/team/about-profiles/mark.jpg" class="profile-image img-fluid" alt="John Doe Profile Image" />
+          <figcaption class="socials">
+            <a href="#"><i class="icon fab fa-linkedin"></i></a>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="col-lg-10 mt-4 mt-lg-0">
+        <h4 class="capitalize">Mark Donald</h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lorem velit, varius sit amet suscipit a, dignissim a metus. Integer at lorem id justo mollis posuere. Curabitur porttitor eget metus a tincidunt. Vivamus et pharetra ligula. Nulla sapien quam, vehicula vel enim in, malesuada dignissim risus. Proin mauris velit, aliquam ac pulvinar ut, viverra vel ex. Sed bibendum ornare ante, eu aliquet tellus tempor a. Vivamus non ligula sit amet dui mollis congue a id augue. Integer facilisis posuere eros, sed semper massa posuere pharetra. Sed quam augue, ultricies id laoreet in, porta a libero. Morbi turpis urna, ornare aliquam vehicula pellentesque, vehicula quis orcin.
+        </p>
+      </div>
+    </div>
+
+    <div class="profile-row d-inline-flex row my-4 text-lg-right text-left flex-row-reverse" data-aos="fade-left" data-aos-once="true" data-aos-mirror="false">
+      <div class="d-flex col-lg-2 align-items-center justify-content-center">
+        <figure class="img-container text-lg-left text-center my-0">
+          <img src="images/team/about-profiles/mark.jpg" class="profile-image img-fluid" alt="John Doe Profile Image" />
+          <figcaption class="socials">
+            <a href="#"><i class="icon fab fa-linkedin"></i></a>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="col-lg-10 mt-4 mt-lg-0">
+        <h4 class="capitalize">Mark Donald</h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lorem velit, varius sit amet suscipit a, dignissim a metus. Integer at lorem id justo mollis posuere. Curabitur porttitor eget metus a tincidunt. Vivamus et pharetra ligula. Nulla sapien quam, vehicula vel enim in, malesuada dignissim risus. Proin mauris velit, aliquam ac pulvinar ut, viverra vel ex. Sed bibendum ornare ante, eu aliquet tellus tempor a. Vivamus non ligula sit amet dui mollis congue a id augue. Integer facilisis posuere eros, sed semper massa posuere pharetra. Sed quam augue, ultricies id laoreet in, porta a libero. Morbi turpis urna, ornare aliquam vehicula pellentesque, vehicula quis orcin.
+        </p>
+      </div>
+    </div>
+
+    <div class="profile-row d-inline-flex row my-4" data-aos="fade-right" data-aos-once="true" data-aos-mirror="false">
+      <div class="d-flex col-lg-2 align-items-center justify-content-center">
+        <!-- 210 x 235 (ie: width*1.12 ratio)-->
+        <figure class="img-container text-lg-left text-center my-0">
+          <img src="images/team/about-profiles/mark.jpg" class="profile-image img-fluid" alt="John Doe Profile Image" />
+          <figcaption class="socials">
+            <a href="#"><i class="icon fab fa-linkedin"></i></a>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="col-lg-10 mt-4 mt-lg-0">
+        <h4 class="capitalize">Mark Donald</h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lorem velit, varius sit amet suscipit a, dignissim a metus. Integer at lorem id justo mollis posuere. Curabitur porttitor eget metus a tincidunt. Vivamus et pharetra ligula. Nulla sapien quam, vehicula vel enim in, malesuada dignissim risus. Proin mauris velit, aliquam ac pulvinar ut, viverra vel ex. Sed bibendum ornare ante, eu aliquet tellus tempor a. Vivamus non ligula sit amet dui mollis congue a id augue. Integer facilisis posuere eros, sed semper massa posuere pharetra. Sed quam augue, ultricies id laoreet in, porta a libero. Morbi turpis urna, ornare aliquam vehicula pellentesque, vehicula quis orcin.
+        </p>
+      </div>
+    </div>
+
+    <div class="profile-row d-inline-flex row my-4 text-lg-right text-left flex-row-reverse" data-aos="fade-left" data-aos-once="true" data-aos-mirror="false">
+      <div class="d-flex col-lg-2 align-items-center justify-content-center">
+        <figure class="img-container text-lg-left text-center my-0">
+          <img src="images/team/about-profiles/mark.jpg" class="profile-image img-fluid" alt="John Doe Profile Image" />
+          <figcaption class="socials">
+            <a href="#"><i class="icon fab fa-linkedin"></i></a>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="col-lg-10 mt-4 mt-lg-0">
+        <h4 class="capitalize">Mark Donald</h4>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lorem velit, varius sit amet suscipit a, dignissim a metus. Integer at lorem id justo mollis posuere. Curabitur porttitor eget metus a tincidunt. Vivamus et pharetra ligula. Nulla sapien quam, vehicula vel enim in, malesuada dignissim risus. Proin mauris velit, aliquam ac pulvinar ut, viverra vel ex. Sed bibendum ornare ante, eu aliquet tellus tempor a. Vivamus non ligula sit amet dui mollis congue a id augue. Integer facilisis posuere eros, sed semper massa posuere pharetra. Sed quam augue, ultricies id laoreet in, porta a libero. Morbi turpis urna, ornare aliquam vehicula pellentesque, vehicula quis orcin.
         </p>
