Back to top text

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -41,6 +41,9 @@
       <div class="circle-icon">
         <i class="icon fas fa-chevron-up fa-fw"></i>
       </div>
+      <div class="to-top-text">
+        <p class="mt-2">Back to Top</p>
+      </div>
     </button>
   </div>
   <main class="header-nav">
