--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,12 +1,12 @@
 {{#section 'head'}}
-<!-- Owl carousel -->
-<link rel="stylesheet" href="css/about.css" />
 
 <!-- AOS (Scroll Animation) -->
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script src="libs/scroll-animate/scroll-config.js"></script>
 
+<!-- Page CSS -->
+<link rel="stylesheet" href="css/about.css" />
 {{/section}}
 
 <section class="about-us">
