--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -46,12 +46,13 @@
       </div>
     </button>
   </div>
+
   <main class="header-nav">
     <!-- Start Navigation -->
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="/">
             <img src="images/logo.png" id="logo" alt="Dreamlink Studio Logo" />
           </a>
           <button type="button" class="navbar-toggler outline-none" data-toggle="collapse" data-target="#navbarSupportedContent">
