Added checking for non-default expandables

--- a/views/products.hbs
+++ b/views/products.hbs
@@ -83,7 +83,7 @@
           </button>
         </div>
         <div class="col-md-4">
-          <button class="btn-hidden" data-expand="#zombie-game-info" data-expand-default="true">
+          <button class="btn-hidden" data-expand="#zombie-game-info">
             <div class="product-img-wrapper shadow">
               <img src="/images/products/zombie-runner.png" class="product-img img-fluid" alt="Zombie Runner cover image"/>
             </div>
