--- a/views/products.hbs
+++ b/views/products.hbs
@@ -9,6 +9,9 @@
   </script>
 
   <script src="js/expandables.js"></script>
+  <script src="libs/modal-video/jquery-modal-video.min.js"></script>
+  <link rel="stylesheet" href="libs/modal-video/modal-video.min.css" />
+  <script src="js/products.js"></script>
 {{/section}}
 
 <!-- Heading and details -->
@@ -111,7 +114,32 @@
       </div>
 
       <div id="zombie-game-info" class="product-info">
-        <p>Zombie game info</p>
+        <div class="container">
+          <h3 class="ml-lg-2 pb-2 text-lg-left text-center">Zombie Runner</h3>
+          <div class="row">
+            <div class="col-lg">
+              <div class="video-thumbnail position-relative text-center">
+                <img src="https://i.ytimg.com/vi/DS15qFLy9RQ/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLBg2fRu6TaKWQG4xInunExZbR1i8Q" class="img-fluid" alt="Zombie Runner YouTube Thumbnail"/>
+                <button class="video-popup-btn" data-video-id="DS15qFLy9RQ">
+                  <i class="fas fa-play"></i>
+                </button>
+              </div>
+            </div>
+            <div class="col-lg-8">
+              <div class="product-description mt-4 mt-lg-0">
+                <p>
+                  Zombie Runner is an action-packed zombie game! Keep running away from the zombies before they catch you! plz get game thx.
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sodales metus mattis, pulvinar dolor id, tincidunt odio. 
+                  Donec maximus egestas mauris eget fringilla. In volutpat nunc vitae auctor hendrerit. Maecenas aliquet nunc quis laoreet commodo. 
+                  Integer sollicitudin enim vitae lectus suscipit, gravida condimentum elit euismod. Curabitur porttitor nisl sed tincidunt mattis. 
+                  Etiam id orci consequat, sodales sem aliquam, facilisis mauris. Quisque ac pellentesque diam. 
+                  Pellentesque ante neque, gravida at sem vitae, sagittis vulputate metus. Aenean aliquam nunc molestie elit dictum venenatis.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
 
       <div id="game3" class="product-info">
@@ -120,8 +148,9 @@
     </div>
   </div>
 
+  <hr class="sep" />
 
-  <div class="applications-cat">
+  <div class="applications-cat mt-5">
     <h1 class="display-5 text-center font-weight-light text-capitalize">Applications</h1>
     <div class="container my-4">
       <div class="row">
