--- a/views/products.hbs
+++ b/views/products.hbs
@@ -35,7 +35,7 @@
   <div class="container-fluid">
     <div class="category-row row justify-content-center">
       <div class="cat-btn-container col-md text-center">
-        <button class="cat-btn" data-toggle="tooltip" data-placement="top" title="See our games">
+        <button class="cat-btn" data-scroll="true" data-to=".games-cat" data-toggle="tooltip" data-placement="top" title="See our games">
           <div class="circle-icon">
             <i class="icon fas fa-gamepad fa-fw"></i>
           </div>
@@ -44,7 +44,7 @@
       </div>
 
       <div class="cat-btn-container col-md text-center">
-        <button class="cat-btn" data-toggle="tooltip" data-placement="top" title="See our applications">
+        <button class="cat-btn" data-scroll="true" data-to=".applications-cat" data-toggle="tooltip" data-placement="top" title="See our applications">
           <div class="circle-icon">
             <i class="icon fas fa-file-code fa-fw"></i>
           </div>
@@ -52,7 +52,7 @@
         </button>
       </div>
 
-      <div class="cat-btn-container col-md text-center" data-toggle="tooltip" data-placement="top" title="See our software">
+      <div class="cat-btn-container col-md text-center" data-scroll="true" data-to=".software-cat" data-toggle="tooltip" data-placement="top" title="See our software">
         <button class="cat-btn">
           <div class="circle-icon">
             <i class="icon fas fa-laptop fa-fw"></i>
@@ -61,7 +61,7 @@
         </button>
       </div>
 
-      <div class="cat-btn-container col-md text-center" data-toggle="tooltip" data-placement="top" title="See our extensions">
+      <div class="cat-btn-container col-md text-center" data-scroll="true" data-to=".extensions-cat" data-toggle="tooltip" data-placement="top" title="See our extensions">
         <button class="cat-btn">
           <div class="circle-icon">
             <i class="icon fas fa-cog fa-fw"></i>
@@ -102,7 +102,7 @@
       </div>
     </div>
 
-    <div class="expandable product-info-wrapper games-product-info mx-5" data-open="false">
+    <div class="expandable product-info-wrapper games-product-info mx-5 py-4 position-relative" data-open="false">
       <div class="panel-controls">
         <button class="float-right close-btn btn-hidden" data-expand-close="true">
           &times;
