Added additional categories

--- a/views/products.hbs
+++ b/views/products.hbs
@@ -178,7 +178,7 @@
       </div>
     </div>
 
-    <div class="expandable product-info-wrapper games-product-info mx-5" data-open="false">
+    <div class="expandable product-info-wrapper position-relative games-product-info mx-5" data-open="false">
       <div class="panel-controls">
         <button class="float-right close-btn btn-hidden" data-expand-close="true">
           &times;
@@ -195,6 +195,143 @@
 
       <div id="app3" class="product-info">
         <p>App #3</p>
+      </div>
+    </div>
+  </div>
+
+  <hr class="sep" />
+
+  <div class="software-cat mt-5">
+    <h1 class="display-5 text-center font-weight-light text-capitalize">Software</h1>
+    <div class="container my-4">
+      <div class="row">
+        <div class="offset-md-2"></div>
+        <div class="col-md-4">
+          <button class="btn-hidden" data-expand="#software1">
+            <div class="product-img-wrapper shadow">
+              <img src="https://via.placeholder.com/350x200/d4351c.png/fff" class="product-img img-fluid" alt="Software1"/>
+            </div>
+          </button>
+        </div>
+        <div class="col-md-4">
+          <button class="btn-hidden" data-expand="#software2">
+            <div class="product-img-wrapper shadow">
+              <img src="https://via.placeholder.com/350x200/d4351c.png/fff" class="product-img img-fluid" alt="Software2"/>
+            </div>
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <div class="expandable product-info-wrapper games-product-info mx-5 py-4 position-relative" data-open="false">
+      <div class="panel-controls">
+        <button class="float-right close-btn btn-hidden" data-expand-close="true">
+          &times;
+        </button>
+      </div>
+      
+      <div id="software1" class="product-info">
+        <div class="container">
+          <h3 class="ml-lg-2 pb-2 text-lg-left text-center">Framer</h3>
+          <div class="row">
+            <div class="col-lg">
+              <div class="video-thumbnail position-relative text-center">
+                <img src="https://i.ytimg.com/vi/4FXRmkdt3_8/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLBWkAYkZy76TjceBP-HAjZKz1AFsA" class="img-fluid" alt="Zombie Runner YouTube Thumbnail"/>
+                <button class="video-popup-btn" data-video-id="4FXRmkdt3_8">
+                  <i class="fas fa-play"></i>
+                </button>
+              </div>
+            </div>
+            <div class="col-lg-8">
+              <div class="product-description mt-4 mt-lg-0">
+                <p>
+                  Ready to design your first animation? Magic Motion is a visual way to create immersive prototypes. Just use the connector to draw a link between elements on the canvas. Manipulate size or position and Framer figures out everything else.
+                  Draw simple card animations or compose complex prototypes. The best part? Nothing you design is throwaway—Framer outputs animation values that can be used 1:1 in production.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div id="software2" class="product-info">
+        <div class="container">
+          <h3 class="ml-lg-2 pb-2 text-lg-left text-center">Firebase</h3>
+          <div class="row">
+            <div class="col-lg">
+              <div class="video-thumbnail position-relative text-center">
+                <img src="https://i.ytimg.com/vi/9kRgVxULbag/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLCobYSKTKWX9O1VSLIZJ945B75tUQ" class="img-fluid" alt="Zombie Runner YouTube Thumbnail"/>
+                <button class="video-popup-btn" data-video-id="9kRgVxULbag">
+                  <i class="fas fa-play"></i>
+                </button>
+              </div>
+            </div>
+            <div class="col-lg-8">
+              <div class="product-description mt-4 mt-lg-0">
+                <p>
+                 Firebase is a platform for creating mobile and web applications developed by Google. It was originally an independent company founded in 2011. In 2014, Google acquired the platform and it is now their flagship offering for app development
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <div id="software3" class="product-info">
+        <p>Game 3</p>
+      </div>
+    </div>
+
+  </div>
+
+  <hr class="sep" />
+
+  <div class="extensions-cat mt-5">
+    <h1 class="display-5 text-center font-weight-light text-capitalize">Extensions</h1>
+    <div class="container my-4">
+      <div class="row">
+        <div class="col-md-4">
+          <button class="btn-hidden" data-expand="#ext1">
+            <div class="product-img-wrapper shadow">
+              <img src="https://via.placeholder.com/350x200/0a2146.png/fff" class="product-img img-fluid" alt="Ext1"/>
+            </div>
+          </button>
+        </div>
+        <div class="col-md-4">
+          <button class="btn-hidden" data-expand="#ext2">
+            <div class="product-img-wrapper shadow">
+              <img src="https://via.placeholder.com/350x200/0a2146.png/fff" class="product-img img-fluid" alt="Ext2"/>
+            </div>
+          </button>
+        </div>
+        <div class="col-md-4">
+          <button class="btn-hidden" data-expand="#ext3">
+            <div class="product-img-wrapper shadow">
+              <img src="https://via.placeholder.com/350x200/0a2146.png/fff" class="product-img img-fluid" alt="Ext3"/>
+            </div>
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <div class="expandable product-info-wrapper position-relative games-product-info mx-5" data-open="false">
+      <div class="panel-controls">
+        <button class="float-right close-btn btn-hidden" data-expand-close="true">
+          &times;
+        </button>
+      </div>
+
+      <div id="ext1" class="product-info">
+        <p>ext #1</p>
+      </div>
+
+      <div id="ext2" class="product-info">
+        <p>ext #2</p>
+      </div>
+
+      <div id="ext3" class="product-info">
+        <p>ext #3</p>
       </div>
     </div>
   </div>
